--- a/themes/default/static/style.css
+++ b/themes/default/static/style.css
@@ -308,6 +308,10 @@ a:hover {
     color: var(--color-text-muted);
     opacity: 0.7;
     text-transform: uppercase;
+    max-width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .post-content pre,
